Style: Mobile screen fixes

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SPES</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/style/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="shortcut icon" href="assets/image/logo.jpeg" type="image/x-icon">
 </head>
 
 <body>
@@ -51,17 +52,14 @@
 
     <div class="about-box">
       <h3 class="about-title">Sobre</h3>
-
       <div class="box-about-paragraf">
-        <p class="about-paragraf">A Universidade do Estado do Pará (UEPA) juntamente com as demais instâncias tem o
-          propósito de promover a realização de evento anual que dialogue com a missão institucional de produzir e
-          difundir conhecimentos e formar profissionais éticos, com responsabilidade social para o desenvolvimento
-          sustentável da Amazônia.</p>
-        <p>Desta forma, a realização Semana de Engenharia de Software terá a participação dos acadêmicos, técnicos
+        <p class="about-paragraf">Neste ano de 2025 a Semana Paraense de engenharia de software abordará uma discussão
+          que envolve os Desafios e oportunidades do ensino, pesquisa e extensão frente à crise climática e a COP30.</p>
+        <p class="about-paragraf">Desta forma, a realização Semana de Engenharia de Software terá a participação dos
+          acadêmicos, técnicos
           administrativos, professores dos cursos de graduação . O evento será um momento muito importante e terá
           apresentação e debate dos estudos que têm se estendido em reflexões sobre os desafios do ensino superior na
-          região Norte. Portanto, o evento terá palestras, minicursos, comunicação oral, feira,
-          exposição e apresentação de pôsteres além das atividades culturais</p>
+          região Norte.</p>
 
       </div>
     </div>
@@ -140,18 +138,18 @@
   </section>
   <footer>
 
-   <div class="box-footer">
+    <div class="box-footer">
 
-    <img src="assets/image/logoatt.png" alt="">
+      <img src="assets/image/logoatt.png" alt="">
       <h4>@2025 SPES</h4>
-     <h5>Todos os direitos reservados.</h5>
-   </div>
+      <h5>Todos os direitos reservados.</h5>
+    </div>
 
-   <div class="box-icon">
-   <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-   <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-   <a href="#"><i class='bx bxl-youtube' ></i></a>
-   </div>
+    <div class="box-icon">
+      <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+      <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+      <a href="#"><i class='bx bxl-youtube'></i></a>
+    </div>
   </footer>
   <script src="assets/script.js"></script>
 </body>
