--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="#sobre">Sobre</a></li>
         <li><a href="#evento">Evento</a></li>
         <li><a href="#palestrantes">Palestrantes</a></li>
-        <li><a href="#cronograma">Cronograma</a></li>
+        <li><a href="cronograma.html">Cronograma</a></li>
         <li><a href="#local">Local</a></li>
       </ul>
     </nav>
@@ -127,7 +127,7 @@
     <div class="box-presentation-links">
       <h3>Acessar cronograma</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quos accusantium placeat</p>
-      <a href="#"><button class="social-button">Acessar Cronograma</button></a>
+      <a href="cronograma.html"><button class="social-button">Acessar Cronograma</button></a>
     </div>
     <div class="box-presentation-links">
       <h3>Local</h3>
