Feat: implement button back

--- a/cronograma.html
+++ b/cronograma.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <a href="index.html" ><button class="buttons-back">Voltar</button></a>
     <form id="cadastroForm" class="box-forms">
         <img class="logo" src="assets/image/logoatt.png" alt="">
         <h1>Cadastro e Seleção de Cursos</h1>
