Fix: Remove button back

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="#sobre">Sobre</a></li>
         <li><a href="#evento">Evento</a></li>
         <li><a href="#palestrantes">Palestrantes</a></li>
-        <li><a href="cronograma.html">Cronograma</a></li>
+        <li><a href="cronograma.html">Inscreva-se</a></li>
         <li><a href="#local">Local</a></li>
       </ul>
     </nav>
