Feat:  Implement connection backend

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img class="logo-site" src="assets/image/logoatt.png" alt="Logo">
+      <a href="#inicio"><img class="logo-site" src="assets/image/logoatt.png" alt="Logo"></a>
       </div>
       <button class="menu-toggle" aria-label="Abrir menu">
         ☰
       </button>
       <ul class="nav-links">
+        <li><a href="#inicio">Início</a></li>
         <li><a href="#sobre">Sobre</a></li>
         <li><a href="#evento">Evento</a></li>
         <li><a href="#palestrantes">Palestrantes</a></li>
@@ -33,7 +34,7 @@
       </ul>
     </nav>
   </header>
-  <section class="init-presentation">
+  <section class="init-presentation" id="inicio">
     <div class="init-box-firts">
       <h3 class="init-title">SEMANA PARAENSE DE ENGENHARIA DE SOFTWARE</h3>
       <p class="init-paragraf">A Universidade do Estado do Pará (UEPA) juntamente com as demais instâncias -
@@ -68,9 +69,9 @@
   <section class="event-presentation" id="evento">
     <div class="firt-box-event">
       <h3>Eventos</h3>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi optio labore culpa cupiditate itaque illo,
-        voluptas pariatur rerum facilis nobis corrupti maiores voluptatum numquam officia illum assumenda molestiae
-        possimus iure.</p>
+      <p>Ao longo de três dias, a Semana de Engenharia de Software contará com uma diversidade de atividades, incluindo
+        minicursos, oficinas, palestras, comunicações orais, e-banners, apresentações
+        artístico-culturais.</p>
     </div>
 
     <div class="second-box-event">
