--- a/cronograma.html
+++ b/cronograma.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro e Seleção de Cursos</title>
     <link rel="stylesheet" href="assets/style/cronograma.css">
+    <link rel="shortcut icon" href="assets/image/logo.jpeg" type="image/x-icon">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <nav class="navbar">
 
           <div class="logo">
-          <a href="#inicio"><img class="logo-site" src="assets/image/logoatt.png" alt="Logo"></a>
+          <a href="index.html"><img class="logo-site" src="assets/image/logoatt.png" alt="Logo"></a>
           <h1 class="text-title">Cadastro e Seleção de Cursos</h1>
           </div>
           
@@ -105,6 +106,7 @@
     </form>
 
     <script src="assets/js/forms.js"></script>
+ 
 </body>
 
 </html>
