--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
 
     <div class="second-box-event">
       <div class="extecion-second-box">
-        <img class="img-event" src="assets/image/icone_siteM.png" alt="Logo do evento">
+        <img class="img-event" src="assets/image/palestra2.jpeg" alt="Logo do evento">
         <h4>Evento 1</h4>
         <p>Palestra segurança na era digital</p>
       </div>
 
       <div class="extecion-second-box">
-        <img class="img-event" src="assets/image/icone_siteM.png" alt="Logo do evento">
+        <img class="img-event" src="assets/image/workshop.jpg" alt="Logo do evento">
         <h4>Evento 2</h4>
         <p>Workshop :"O grande salto" IA seu Futuro.</p>
       </div>
 
       <div class="extecion-second-box">
-        <img class="img-event" src="assets/image/icone_siteM.png" alt="Logo do evento">
+        <img class="img-event" src="assets/image/palestra.jpeg" alt="Logo do evento">
         <h4>Evento 3</h4>
         <p>Minicurso emplementação de machine larning em grande escala</p>
       </div>
@@ -104,7 +104,7 @@
 
     <div class="orden-speaker-box">
       <div class="speaker-box">
-        <img src="assets/image/eu.png" alt="Foto do Palestrantes">
+        <img src="assets/image/imghomen.jpeg" alt="Foto do Palestrantes">
         <h5> Dr.Silvio Santos</h5>
         <p>
           Ph .D e especialista em segurança digital
@@ -112,7 +112,7 @@
         <a href="#">Currículo</a>
       </div>
       <div class="speaker-box">
-        <img src="assets/image/eu.png" alt="Foto do Palestrantes">
+        <img src="assets/image/imgmulher.jpeg" alt="Foto do Palestrantes">
         <h5>Dra.Mallenia de miquella</h5>
         <p>
           Ph .D e especialista em Machine learning e robotica
