Feat: add new campo

--- a/cronograma.html
+++ b/cronograma.html
@@ -61,6 +61,7 @@
                     <select  class="select" id="categoria">
                         <option class="select-value"  value="professor">Professor</option>
                         <option class="select-value" value="aluno">Aluno</option>
+                        <option class="select-value" value="ti">Profissional de Ti</option>
                     </select>
                 </div>
             </div>
