--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         tem o propósito de promover a realização de evento anual que dialogue com a missão institucional de produzir e
         difundir conhecimentos e formar profissionais éticos, com responsabilidade social para o desenvolvimento
         sustentável da Amazônia</p>
-      <a href="#"><button class="init-button">Saiba mais!</button></a>
+      <a href="#evento"><button class="init-button">Saiba mais!</button></a>
     </div>
     <img class="init-img" src="assets/image/inittucano.jpeg" alt="">
   </section>
@@ -126,9 +126,9 @@
   <section class="presentation-links">
 
     <div class="box-presentation-links">
-      <h3>Acessar cronograma</h3>
+      <h3>Inscreva-se</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quos accusantium placeat</p>
-      <a href="cronograma.html"><button class="social-button">Acessar Cronograma</button></a>
+      <a href="cronograma.html"><button class="social-button">Acessar Inscrição</button></a>
     </div>
     <div class="box-presentation-links">
       <h3>Local</h3>
