feat:  Implemented a forns to update the layout fields

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="#palestrantes">Palestrantes</a></li>
         <li><a href="cronograma.html">Inscreva-se</a></li>
         <li><a href="#local">Local</a></li>
+        <li><a href="formulario.html">Adiconar evento</a></li>
       </ul>
     </nav>
   </header>
@@ -128,7 +129,7 @@
     <div class="box-presentation-links">
       <h3>Inscreva-se</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quos accusantium placeat</p>
-      <a href="cronograma.html"><button class="social-button">Acessar Inscrição</button></a>
+      <a href="cronograma.html"><button class="social-button">Acessar inscrição </button></a>
     </div>
     <div class="box-presentation-links">
       <h3>Local</h3>
