--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <li><a href="#evento">Evento</a></li>
         <li><a href="#palestrantes">Palestrantes</a></li>
         <li><a href="cronograma.html">Inscreva-se</a></li>
-        <li><a href="#local">Local</a></li>
         <li><a href="formulario.html">Adiconar evento</a></li>
       </ul>
     </nav>
@@ -57,11 +56,7 @@
       <div class="box-about-paragraf">
         <p class="about-paragraf">Neste ano de 2025 a Semana Paraense de engenharia de software abordará uma discussão
           que envolve os Desafios e oportunidades do ensino, pesquisa e extensão frente à crise climática e a COP30.</p>
-        <p class="about-paragraf">Desta forma, a realização Semana de Engenharia de Software terá a participação dos
-          acadêmicos, técnicos
-          administrativos, professores dos cursos de graduação . O evento será um momento muito importante e terá
-          apresentação e debate dos estudos que têm se estendido em reflexões sobre os desafios do ensino superior na
-          região Norte.</p>
+      
 
       </div>
     </div>
@@ -105,7 +100,7 @@
 
     <div class="orden-speaker-box">
       <div class="speaker-box">
-        <img src="assets/image/imghomen.jpeg" alt="Foto do Palestrantes">
+        <img src="assets/image/pessoa1.jpeg" alt="Foto do Palestrantes">
         <h5> Dr.Silvio Santos</h5>
         <p>
           Ph .D e especialista em segurança digital
@@ -113,7 +108,7 @@
         <a href="#">Currículo</a>
       </div>
       <div class="speaker-box">
-        <img src="assets/image/imgmulher.jpeg" alt="Foto do Palestrantes">
+        <img src="assets/image/pessoa2.jpeg" alt="Foto do Palestrantes">
         <h5>Dra.Mallenia de miquella</h5>
         <p>
           Ph .D e especialista em Machine learning e robotica
