Feat: Implemented gallery and registration of images in the database

--- a/cronograma.html
+++ b/cronograma.html
@@ -53,7 +53,7 @@
                 </div>
                 <div>
                     <label for="celular">Celular</label>
-                    <input class="input-enter" type="tel" id="celular" name="celular" required>
+                    <input class="input-enter" type="tel" id="celular" name="celular" required placeholder="xxxxxxxx">
                 </div>
                 <div class="select-primary">
                     <label for="">Categoria</label>
