--- a/index.html
+++ b/index.html
@@ -135,6 +135,19 @@
   </section>
   <footer>
 
+      
+<div id="button-container"></div>
+
+
+<div id="content-display">
+  <h2 class="init-title"></h2>
+  <p class="init-paragraf"></p>
+  <img class="init-img" src="" alt="Imagem Principal">
+  <img class="logo-site" src="" alt="Logo">
+  <img class="about-img" src="" alt="Segunda Imagem">
+  <p class="about-paragraf"></p>
+</div>
+
     <div class="box-footer">
 
       <img src="assets/image/logoatt.png" alt="">
