--- a/formulario.html
+++ b/formulario.html
@@ -20,10 +20,10 @@
         ☰
       </button>
       <ul class="nav-links">
-        <li><a href="#inicio">Início</a></li>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#evento">Evento</a></li>
-        <li><a href="#palestrantes">Palestrantes</a></li>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="index.html">Sobre</a></li>
+        <li><a href="index.html">Evento</a></li>
+        <li><a href="index.html">Palestrantes</a></li>
         <li><a href="cronograma.html">Inscreva-se</a></li>
         <li><a href="formulario.html">Adiconar evento</a></li>
       </ul>
