--- a/evento.html
+++ b/evento.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro e Seleção de Cursos</title>
-    <link rel="stylesheet" href="assets/style/cronograma.css">
+    <link rel="stylesheet" href="assets/style/evento.css">
     <link rel="shortcut icon" href="assets/image/favicon-16x16.png" type="image/x-icon">
 </head>
 
