Style: add noticia

--- a/formulario.html
+++ b/formulario.html
@@ -80,7 +80,7 @@
     </form>
   </section>
   
-  <a href="index.html">Ver site novo</a>
+  <a href="index.html">Ver site atualizado</a>
   <script src="assets/js/newpage.js"></script>
 </body>
 
