--- a/login.html
+++ b/login.html
@@ -17,10 +17,12 @@
         <form id="loginForm" action="/login" method="post">
             <div class="teste">
                 <div class="ajuste">
+                    <label for="">Email</label>
                     <input type="text" id="email" name="email" placeholder="Digite seu e-mail">
                 
                 </div>
                 <div class="ajuste puxa">
+                    <label for="">Senha</label>
                     <input type="password" id="senha" name="password" placeholder="Digite sua senha">
 
                 </div>
