Feat: Implemented adding notifications and displaying the latest news

--- a/index.html
+++ b/index.html
@@ -122,15 +122,14 @@
   <section class="noticias" id="noticias">
     <h4>Ultimas notícias</h4>
   <div class="container">
-
     <div class="noticia-imagem">
        <img class="img-noticia" src="assets/image/logoatt.png" alt="">
       <button class="ver-mais">ver mais!</button>
     </div>
 
     <div class="noiticia-text">
-      <h2>pegou fogo</h2>
-      <p>
+      <h2 class="noticia-title">pegou fogo</h2>
+      <p class="noticia-description">
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, minus pariatur suscipit unde id molestias recusandae expedita possimus aliquam voluptates, facere consequatur facilis voluptatem corporis odit omnis fugiat et ut.
       </p>
     </div>
