feat: implement article registration

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="#palestrantes">Palestrantes</a></li>
         <li><a href="evento.html">Inscreva-se</a></li>
         <li><a href="#noticias">Notícias</a></li>
-        <li><a href="artigo.html">Adicionar Artigo</a></li>
+        <li><a href="artigos.html">Adicionar Artigo</a></li>
       </ul>
     </nav>
   </header>
