feat: Implemented the display of articles for the admin

--- a/admin.html
+++ b/admin.html
@@ -26,7 +26,7 @@
       </button>
       <ul class="nav-links">
         <li><a href="formulario.html">Adiconar evento</a></li>
-        <li><a href="formulario.html">Ver artigos</a></li>
+        <li><a href="adimnartigos.html">Ver artigos</a></li>
       </ul>
     </nav>
   </header>
