--- a/artigos.html
+++ b/artigos.html
@@ -7,27 +7,30 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-          <div class="logo">
-            <a href="#inicio"><img class="logo-site" src="assets/image/logoatt.png" alt="Logo"></a>
-          </div>
-          <button class="menu-toggle" aria-label="Abrir menu">
-            ☰
-          </button>
-          <ul class="nav-links">
-            <li><a href="index.html">Início</a></li>
-            <li><a href="index.html">Sobre</a></li>
-            <li><a href="index.html">Evento</a></li>
-            <li><a href="index.html">Palestrantes</a></li>
-            <li><a href="cronograma.html">Inscreva-se</a></li>
-            <li><a href="formulario.html">Adiconar evento</a></li>
-          </ul>
-        </nav>
-      </header>
+  <header>
+    <nav class="navbar">
+
+      <div class="logo">
+      <a href="index.html"><img class="logo-site" src="assets/image/logoatt.png" alt="Logo"></a>
+      <h1 class="text-title">Submeter Artigos</h1>
+      </div>
+      
+      <button class="menu-toggle" aria-label="Abrir menu">
+        ☰
+      </button>
+      
+      <ul class="nav-links">
+        <li><a href="index.html">Início</a></li>
+        <li><a href="index.html">Sobre</a></li>
+        <li><a href="index.html">Evento</a></li>
+        <li><a href="index.html">Palestrantes</a></li>
+        <li><a href="index.html">Local</a></li>
+      </ul>
+    </nav>
+  </header>
 
       <section class="update-section">
-        <h1>Submissão de Artigo</h1>
+  
         <form id="articleForm" enctype="multipart/form-data">
           <label for="title">Título do Artigo</label>
           <input type="text" id="title" name="title" placeholder="Digite o título do artigo" required>
