--- a/evento.html
+++ b/evento.html
@@ -29,6 +29,7 @@
             <li><a href="index.html">Evento</a></li>
             <li><a href="index.html">Palestrantes</a></li>
             <li><a href="index.html">Local</a></li>
+            <li><a href="artigos.html"></a></li>
           </ul>
         </nav>
       </header>
