--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="assets/style/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="shortcut icon" href="assets/image/logo.jpeg" type="image/x-icon">
@@ -29,9 +28,9 @@
         <li><a href="#sobre">Sobre</a></li>
         <li><a href="#evento">Evento</a></li>
         <li><a href="#palestrantes">Palestrantes</a></li>
-        <li><a href="evento.html">Inscreva-se</a></li>
         <li><a href="#noticias">Notícias</a></li>
-        <li><a href="artigos.html">Adicionar Artigo</a></li>
+        <li><a href="evento.html">Inscreva-se</a></li>
+        <li><a href="artigos.html">Submeter Artigo</a></li>
       </ul>
     </nav>
   </header>
