Feat: admin has article display implementation Style:Applied the new style for addin

--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SPES</title>
-  <link rel="stylesheet" href="assets/style/style.css">
+  <link rel="stylesheet" href="assets/style/admin.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -30,8 +30,14 @@
       </ul>
     </nav>
   </header>
-  
-  <script src="assets/script.js"></script>
+
+  <section class="artigos-section">
+    <h1>Lista de Artigos</h1>
+    <div id="artigos-list">
+        
+    </div>
+
+  <script src="assets/js/admin.js"></script>
 </body>
 
 </html>
