Feat: Implemented option to add news and general style change

--- a/artigos.html
+++ b/artigos.html
@@ -36,12 +36,12 @@
   
         <form id="articleForm" enctype="multipart/form-data">
           <div class="firts">
-            <div class="addFirtImage">
 
-            <label for="pdfFile">Arquivo PDF</label>
-            <label for="imageLogo" class="custom-file-upload">
-              <i class='bx bx-image-add'></i>
-            </label>
+            <div class="addFirtImage">
+              <label for="pdfFile">Arquivo PDF</label>
+              <label for="pdfFile" class="custom-file-upload">
+                <i class='bx bx-image-add'></i>
+              </label>
             
             <input type="file" id="pdfFile" name="pdfFile" accept=".pdf" required>
             </div>
