--- a/evento.html
+++ b/evento.html
@@ -28,7 +28,9 @@
             <li><a href="index.html">Sobre</a></li>
             <li><a href="index.html">Evento</a></li>
             <li><a href="index.html">Palestrantes</a></li>
-            <li><a href="index.html">Local</a></li>
+            <li><a href="#noticias">Notícias</a></li>
+            <li><a href="evento.html">Inscreva-se</a></li>
+            <li><a href="artigos.html">Submeter Artigo</a></li>
             <li><a href="artigos.html"></a></li>
           </ul>
         </nav>
