--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       </ul>
     </nav>
   </header>
+
   <section class="init-presentation" id="inicio">
     <div class="init-box-firts">
       <h3 class="init-title">SEMANA PARAENSE DE ENGENHARIA DE SOFTWARE</h3>
@@ -56,8 +57,6 @@
       <div class="box-about-paragraf">
         <p class="about-paragraf">Neste ano de 2025 a Semana Paraense de engenharia de software abordará uma discussão
           que envolve os Desafios e oportunidades do ensino, pesquisa e extensão frente à crise climática e a COP30.</p>
-      
-
       </div>
     </div>
   </section>
@@ -123,7 +122,7 @@
   <div class="container">
     <div class="noticia-imagem">
        <img class="img-noticia" src="assets/image/logoatt.png" alt="">
-      <button class="ver-mais">ver mais!</button>
+      <button class="ver-mais">Ver mais!</button>
     </div>
 
     <div class="noiticia-text">
