feat: Session function implemented on pages

--- a/formulario.html
+++ b/formulario.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
       <div class="logo">
         <a href="#inicio"><img class="logo-site" src="assets/image/logoatt.png" alt="Logo"></a>
-        <h1 class="text-title">Atualizar layout do site e notícias</h1>
+        <h1 class="text-title">Atualizar Informações do site</h1>
       </div>
       <button class="menu-toggle" aria-label="Abrir menu">
         ☰
@@ -51,8 +51,8 @@
   
       
         <div class="addtitle">
-          <input type="text" id="title" name="title" placeholder="Digite o título">
-          <textarea id="description" name="description" placeholder="Digite a descrição"></textarea>
+          <input type="text" id="title" name="title" placeholder="Digite o título do início">
+          <textarea id="description" name="description" placeholder="Digite a descrição do início"></textarea>
         </div>
       </div>
   
