Feat: Implemented success and error alerts

--- a/noticias.html
+++ b/noticias.html
@@ -35,6 +35,7 @@
   <section class="update-section">
     
     <form id="updateForm">
+      <div id="alert-box" class="alert-box hidden"></div>
       <div class="additional-fields">
       
         <div class="addFirtImage">
