--- a/formulario.html
+++ b/formulario.html
@@ -35,7 +35,7 @@
   <section class="update-section">
     
     <form id="updateForm">
-   
+      <div id="alert-box" class="alert-box hidden"></div>
       <div class="addlogo">
         <label for="" class="text-title-form">Escolher Logo</label>
         <label for="imageLogo" class="custom-file-upload">
