Sytle: New login style

--- a/login.html
+++ b/login.html
@@ -16,10 +16,8 @@
 
 <body>
     <main class="login">
-
-        <h3>Login Funcionário</h3>
-
         <form id="loginForm" action="/login" method="post">
+            <img src="assets/image/logoatt.png" alt="">
             <div class="teste">
                 <div class="ajuste">
                     <label for="">Email</label>
@@ -31,12 +29,10 @@
                     <input type="password" id="senha" name="password" placeholder="Digite sua senha">
 
                 </div>
-                <input class="btn" type="submit" name="acao" value="Logar">
+                <input class="btn" type="submit" name="acao" value="Entrar">
             </div>
         </form>
         
-
-
     </main>
 
     
