Style: simple changes to html

--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-      <a href="#inicio"><img class="logo-site" src="assets/image/logoatt.png" alt="Logo"></a>
+      <a href="index.html"><img class="logo-site" src="assets/image/logoatt.png" alt="Logo"></a>
       </div>
       <button class="menu-toggle" aria-label="Abrir menu">
         ☰
