--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <img src="assets/image/pessoa2.jpeg" alt="Foto do Palestrantes">
         <h5>Dra.Mallenia de miquella</h5>
         <p>
-          Ph .D e especialista em Machine learning e robotica
+          Ph .D e especialista em Machine learning
         </p>
       </div>
 
