--- a/index.html
+++ b/index.html
@@ -141,13 +141,12 @@
     <div class="box-presentation-links">
       <h3>Inscreva-se</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quos accusantium placeat</p>
-      <a href="cronograma.html"><button class="social-button">Acessar inscrição </button></a>
+      <a href="evento.html"><button class="social-button">Acessar inscrição </button></a>
     </div>
     <div class="box-presentation-links">
       <h3>Local</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quos accusantium placeat</p>
-      <a href="#"><button class="social-button">Acessar Local</button></a>
-    
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.3756347438307!2d-47.948072082809624!3d-2.0050121836842583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x92badc9d08ed825b%3A0xf094dbcbc347e265!2sEscola%20Municipal%20de%20Ensino%20Fundamental%20Nossa%20Senhora%20do%20Guadalupe!5e0!3m2!1spt-BR!2sbr!4v1737415657884!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
   <footer>
